--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,12 @@
+@font-face {
+  font-family: "Renogare";
+  src: url("../assets/renogare.otf") format("opentype");
+}
+
 .container {
   padding: 0 2rem;
+  background: rgb(34, 193, 195);
+  background: linear-gradient(338deg, rgba(34, 193, 195, 1) 0%, rgba(101, 45, 253, 1) 100%);
 }
 
 .main {
@@ -33,11 +40,11 @@
   text-decoration: none;
 }
 
-.title a:hover,
+/* .title a:hover,
 .title a:focus,
 .title a:active {
   text-decoration: underline;
-}
+} */
 
 .title {
   margin: 0;
@@ -61,7 +68,7 @@
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+  font-family: Renogare, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
@@ -70,32 +77,56 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 90vw;
 }
 
 .card {
+  display: inline-flex;
+  align-items: center;
   margin: 1rem;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
 }
 
-.card:hover,
+.container h1,
+.text,
+.textoption {
+  font-family: "Renogare", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.text,
+.textoption {
+  font-size: 2.0rem;
+}
+
+.text {
+  display: block;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.textoption {
+  display: inline-flex;
+  justify-content: center;
+  min-width: 100px;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  padding: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  text-decoration: underline;
+}
+
+/* .card:hover,
 .card:focus,
 .card:active {
   color: #0070f3;
   border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
+} */
 
 .card p {
   margin: 0;
