--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,6 +20,9 @@
 }
 
 .footer {
+  position: fixed;
+  bottom: 0;
+ width: 100%; 
   display: flex;
   flex: 1;
   padding: 2rem 0;
@@ -80,11 +83,26 @@
   max-width: 90vw;
 }
 
+.button {
+  transition: background 0.2s;
+  border: 2px solid rgba(255, 255, 255, 0.7);
+  background: transparent;
+  font-size: 1.5rem;
+  padding: 1rem;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 100%;
+}
+
+.button:hover {
+  background: rgba(255, 255, 255, 0.15);
+}
+
 .card {
   display: inline-flex;
   align-items: center;
-  margin: 1rem;
-  padding: 1.5rem;
+  /* margin: 1rem; */
+  /* padding: 1.5rem; */
   text-align: left;
   color: inherit;
   text-decoration: none;
@@ -93,14 +111,15 @@
 
 .container h1,
 .text,
-.textoption {
+.textoption,
+.button {
   font-family: "Renogare", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .text,
 .textoption {
-  font-size: 2.0rem;
+  font-size: 2rem;
 }
 
 .text {
@@ -109,7 +128,22 @@
   margin-right: 1rem;
 }
 
+.textoptioncontainer {
+  position: relative;
+}
+
+.icon {
+  position: absolute;
+  border-radius: 100px;
+  background: #121212;
+  border: 1px solid white;
+  padding: 3px;
+  top: 15px;
+  right: 8px;
+}
+
 .textoption {
+  cursor: pointer;
   display: inline-flex;
   justify-content: center;
   min-width: 100px;
@@ -118,7 +152,7 @@
   padding: 1rem;
   margin-left: 1rem;
   margin-right: 1rem;
-  text-decoration: underline;
+  user-select: none;
 }
 
 /* .card:hover,
