--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,18 +11,19 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 
 .footer {
-  position: fixed;
+  position: sticky;
+  margin-top: 10rem;
   bottom: 0;
- width: 100%; 
+  width: 100%;
   display: flex;
   flex: 1;
   padding: 2rem 0;
@@ -36,6 +37,7 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+  color: rgba(255, 255, 255, 0.75);
 }
 
 .title a {
@@ -51,8 +53,12 @@
 
 .title {
   margin: 0;
+  margin-bottom: 2rem;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 2.5rem;
+  padding-top: 3rem;
+  padding-bottom: 4rem;
+  border-bottom: 1px solid white;
 }
 
 .title,
@@ -75,6 +81,12 @@
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
+.gridContainer {
+  padding: 3px;
+  border: 3px solid rgba(255, 255, 255, 0.08);
+  border-radius: 10px;
+}
+
 .grid {
   display: flex;
   align-items: center;
@@ -84,7 +96,7 @@
 }
 
 .button {
-  transition: background 0.2s;
+  transition: background 0.2s, transform 0.2s;
   border: 2px solid rgba(255, 255, 255, 0.7);
   background: transparent;
   font-size: 1.5rem;
@@ -94,8 +106,16 @@
   width: 100%;
 }
 
+@media (min-width: 600px) {
+  .button {
+    width: 400px;
+  }
+}
+
 .button:hover {
-  background: rgba(255, 255, 255, 0.15);
+  background: rgba(0, 0, 0, 0.1);
+  transform: rotateZ(2deg);
+  box-shadow: 0 2px 2px 2px rgba(12, 12, 12, 0.05);
 }
 
 .card {
@@ -112,7 +132,8 @@
 .container h1,
 .text,
 .textoption,
-.button {
+.button,
+.footer a {
   font-family: "Renogare", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
