--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,21 +15,27 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
+  justify-content: flex-start;
   align-items: center;
 }
 
+@media (min-width: 600px) {
+  .main {
+    justify-content: center;
+  }
+}
+
 .footer {
-  position: sticky;
-  margin-top: 10rem;
-  bottom: 0;
   width: 100%;
   display: flex;
   flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
+  padding: 1rem 0;
   justify-content: center;
   align-items: center;
+
+  @media (min-width: 600px) {
+    padding: 2rem 0;
+  }
 }
 
 .footer a {
@@ -37,11 +43,10 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-  color: rgba(255, 255, 255, 0.75);
 }
 
 .title a {
-  color: #0070f3;
+  font-size: 1rem;
   text-decoration: none;
 }
 
@@ -56,9 +61,12 @@
   margin-bottom: 2rem;
   line-height: 1.15;
   font-size: 2.5rem;
-  padding-top: 3rem;
-  padding-bottom: 4rem;
   border-bottom: 1px solid white;
+
+  @media (min-width: 600px) {
+    padding-top: 3rem;
+    padding-bottom: 4rem;
+  }
 }
 
 .title,
@@ -85,6 +93,8 @@
   padding: 3px;
   border: 3px solid rgba(255, 255, 255, 0.08);
   border-radius: 10px;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .grid {
@@ -96,26 +106,34 @@
 }
 
 .button {
-  transition: background 0.2s, transform 0.2s;
+  position: fixed;
+  bottom: 2rem;
+
+  transition: background 0.2s;
   border: 2px solid rgba(255, 255, 255, 0.7);
   background: transparent;
+  margin: 1rem;
+
   font-size: 1.5rem;
   padding: 1rem;
   border-radius: 10px;
   cursor: pointer;
-  width: 100%;
+  width: 90%;
 }
 
 @media (min-width: 600px) {
   .button {
     width: 400px;
+    transition: background 0.2s, transform 0.2s;
   }
 }
 
 .button:hover {
   background: rgba(0, 0, 0, 0.1);
-  transform: rotateZ(2deg);
   box-shadow: 0 2px 2px 2px rgba(12, 12, 12, 0.05);
+  @media (min-width: 600px) {
+    transform: rotateZ(2deg);
+  }
 }
 
 .card {
@@ -140,14 +158,20 @@
 
 .text,
 .textoption {
-  font-size: 2rem;
+  font-size: 1rem;
   text-align: center;
+}
+
+@media (min-width: 600px) {
+  .text,
+  .textoption {
+    font-size: 1.5rem;
+    text-align: center;
+  }
 }
 
 .text {
   display: block;
-  margin-left: 1rem;
-  margin-right: 1rem;
 }
 
 .textoptioncontainer {
