--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -58,7 +58,7 @@
 
 .title {
   margin: 0;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   line-height: 1.15;
   font-size: 2.5rem;
   border-bottom: 1px solid white;
@@ -66,6 +66,7 @@
   @media (min-width: 600px) {
     padding-top: 3rem;
     padding-bottom: 4rem;
+    margin-bottom: 2rem;
   }
 }
 
@@ -87,6 +88,13 @@
   font-size: 1.1rem;
   font-family: Renogare, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
+}
+
+.spacer {
+  display: block;
+  @media (min-width: 600px) {
+    display: none;
+  }
 }
 
 .gridContainer {
