--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -156,6 +156,7 @@
 }
 
 .container h1,
+.container h2,
 .text,
 .textoption,
 .button,
@@ -164,10 +165,18 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
+.container h2 {
+  color: rgba(255, 255, 255, 0.7);
+}
+
 .text,
 .textoption {
   font-size: 1rem;
   text-align: center;
+}
+
+.textoption:hover {
+  background: rgba(255, 255, 255, 0.2);
 }
 
 @media (min-width: 600px) {
