--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -60,13 +60,19 @@
   margin: 0;
   margin-bottom: 1rem;
   line-height: 1.15;
-  font-size: 2.5rem;
+  font-size: 28px;
   border-bottom: 1px solid white;
 
   @media (min-width: 600px) {
     padding-top: 3rem;
     padding-bottom: 4rem;
     margin-bottom: 2rem;
+  }
+}
+
+@media (min-width: 600px) {
+  .title {
+    font-size: 2.5rem;
   }
 }
 
